Arreglado vista logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
 
                 <a href="./index.html">
-                    <img src="/public/imgs/logo_cortado.png" alt="logo de la marca" class="navbar__logo" width: 100px>
+                    <img src="./public/imgs/logo_cortado.png" alt="logo de la marca" class="navbar__logo" width: 100px>
                 </a>
            
 
